package.json homepage update

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fylo-data-storage-component",
-  "homepage": "https://github.com/monashperera/fylo-data-storage-component",
+  "homepage": "https://monashperera.github.io/fylo-data-storage-component/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
